# syncgit2

./: .gitignore  Cargo.toml
config/log/: log4rs.yml
config/repo/: repo.toml.template
src/: constant.rs  lib.rs  main.rs
src/background/: gitsync.rs  mod.rs  types.rs
src/config_parser/: mod.rs  types.rs  validator.rs
src/web/: github.rs  mod.rs
