[package]
name = "syncgit2"
version = "0.1.0"
edition = "2021"
authors = ["longjin <longjin@DragonOS.org>"]
license = "GPL-3.0-only"
description = "Sync any git repo to any git server."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = { version = "4.5.1", features = ["rustls"]}
auth-git2 = "0.3.0"
clap = "4.5.1"
dotenv = "0.15.0"
git2 = { version = "=0.18.2", features = ["vendored-libgit2"] }
lazy_static = "1.4.0"
log = "0.4.20"
log4rs = "1.3.0"
serde = { version = "=1.0.196", features = ["derive", "alloc"]}
sha2 = "0.10.8"
thingbuf = "0.1.4"
toml = "0.8.10"
